# scripture-stats-service

./: Dockerfile  README.md  pyproject.toml  server.py  store.py
